destaq nos textos dos details

--- a/detailsFC4.html
+++ b/detailsFC4.html
@@ -49,26 +49,26 @@
             </div>
             <section class="content__description">
                 <p class="p__details">
-                    Far Cry 4 é um jogo em mundo aberto de tiro na primeira pessoa (FPS). E Continua com muitas das
-                    características do Far Cry 3, incluindo os elementos de role-playing game (RPG), pontos de
+                    <span class="destaq"> Far Cry 4</span> é um jogo em mundo aberto de tiro na primeira pessoa <span class="destaq">(FPS)</span>. E Continua com muitas das
+                    características do <span class="destaq">Far Cry 3</span>, incluindo os elementos de role-playing game <span class="destaq">(RPG)</span>, pontos de
                     experiência, árvores de habilidades, um sistema de melhorias artesanal, a possibilidade de caçar
                     animais e escalar torres para libertar zonas, aumentando assim o mapa. O jogador pode igualmente se
                     esconder atrás de objetos para fugir das linhas de visão e também para olhar ao redor e disparar sem
                     ver, bem como a capacidade de realizar ataques furtivos de cima, abaixo ou perto do inimigo.
                 </p>
                 <p class="p__details">
-                    O tamanho do mapa é relativamente igual ao de Far Cry 3, no entanto, por ser uma zona montanhosa, é
-                    mais denso que o do jogo anterior.No jogo, o modo 'Hardcore', o jogador pode ficar com hipotermia
-                    quando em contato com a água gelada, e ganha doenças quando mordido por animais venenosos. Far Cry 4
-                    tem vários finais, dependendo das escolhas do jogador, mas é "menos claro" que o de Far Cry 3.
+                    O tamanho do mapa é relativamente igual ao de <span class="destaq">Far Cry 3</span>, no entanto, por ser uma zona montanhosa, é
+                    mais denso que o do jogo anterior.No jogo, o modo <span class="destaq"> 'Hardcore' </span>, o jogador pode ficar com hipotermia
+                    quando em contato com a água gelada, e ganha doenças quando mordido por animais venenosos. <span class="destaq">Far Cry 4</span>
+                    tem vários finais, dependendo das escolhas do jogador, mas é <span class="destaq">"menos claro"</span> que o de <span class="destaq">Far Cry 3</span>.
                     Para além da história principal, também existem várias missões secundárias para completar.
                 </p>
                 <p class="p__details">
-                    Em Far Cry 4 o protagonista é Ajay Ghale que regressa a Kyrat (uma nação fictícia fortemente
-                    inspirada em locais da região Himalaia do Nepal), uma zona indomável e selvagem no seu pais de
+                    Em <span class="destaq">Far Cry 4</span> o protagonista é <span class="destaq">Ajay Ghale</span> que regressa a <span class="destaq">Kyrat </span>(<span class="destaq">uma nação fictícia fortemente
+                        inspirada em locais da região Himalaia do Nepal</span>), uma zona indomável e selvagem no seu pais de
                     origem, para espalhar as cinzas da sua falecida mãe. Uma vez lá, vê-se envolvido numa guerra civil
-                    entre os rebeldes (conhecidos como Caminho Dourado) e o regime despótico do auto-intitulado rei, o
-                    sádico Pagan Min (Troy Baker). O jogador tem a possibilidade de escolher de que lado quer
+                    entre os rebeldes (conhecidos como <span class="destaq"> Caminho Dourado</span>) e o regime despótico do auto-intitulado rei, o
+                    sádico <span class="destaq">Pagan Min (Troy Baker)</span>. O jogador tem a possibilidade de escolher de que lado quer
                     juntar forças, resultando em diferentes finais.
                 </p>
             </section>
