--- a/detailsFC6.html
+++ b/detailsFC6.html
@@ -50,8 +50,8 @@
       </div>
       <section id="content__description">
         <p class="p__details">
-          Far Cry 6 é ambientado na ilha fictícia de Yara, uma réplica de Cuba. O país é comandado pelo fascista Antón
-          Castillo – vivido pelo ator Giancarlo Esposito e, apesar de parecer um verdadeiro paraíso para se viver, o
+          <span class="destaq">Far Cry 6</span> é ambientado na ilha fictícia de <span class="destaq">Yara</span>, uma réplica de <span class="destaq">Cuba</span>. O país é comandado pelo fascista <span class="destaq">Antón
+            Castillo</span> – vivido pelo ator Giancarlo Esposito e, apesar de parecer um verdadeiro paraíso para se viver, o
           governo autoritário de seu líder, focado na criação de um medicamento que pode curar diversas doenças –
           inclusive o câncer.
           Contrariar Castillo nesse território é o mesmo que assinar a sua sentença de morte, e é esse o perigo que vive
