--- a/detailsFC5.html
+++ b/detailsFC5.html
@@ -50,35 +50,41 @@
       </div>
       <section id="content__description">
         <p class="p__details">
-          Far Cry 5 é um jogo eletrônico de tiro em primeira pessoa de ação-aventura ambientado em um mundo aberto. Foi
-          desenvolvido pela Ubisoft Montreal e publicado pela Ubisoft para Microsoft Windows, PlayStation 4 e Xbox One
-          em
-          27
-          de março de 2018 e foi lançado no 3 de Novembro para o Google Stadia, junto com o Far Cry: New Dawn. É o
+          <span class="destaq">Far Cry 5</span> é um jogo eletrônico de tiro em primeira pessoa de ação-aventura
+          ambientado em um mundo aberto. Foi
+          desenvolvido pela <span class="destaq">Ubisoft Montreal</span> e publicado pela <span class="destaq">Ubisoft
+            para Microsoft Windows</span>, <span class="destaq">PlayStation 4</span> e <span class="destaq">Xbox
+            One</span>
+          em 27 de março de 2018 e foi lançado no 3 de Novembro para o <span class="destaq">Google Stadia</span>, junto com o <span
+            class="destaq">Far Cry: New Dawn</span>. É o
           décimo
-          titulo da serie Far Cry e o quinto jogo principal.
+          titulo da serie <span class="destaq">Far Cry</span> e o quinto jogo principal.
         </p>
 
         <p class="p__details">
           Em <span class="destaq">Far Cry 5</span> o jogador assume o papel de um delegado de xerife que foi enviado ao
-          condado fictício de Hope County,
-          em Montana, para prender Joseph Seed (chamado de <span class="destaq">"O Pai"</span> por seus seguidores, os
+          condado fictício de <span class="destaq">Hope County</span>,
+          em <span class="destaq">Montana</span>, para prender <span class="destaq">Joseph Seed</span> (chamado de <span
+            class="destaq">"O Pai"</span> por seus seguidores, os
           <span class="destaq">"Edenetes"</span>). Seed é um
           pregador
-          radical que acredita que foi escolhido por Deus para proteger o povo de Hope County de um <span
-            class="destaq">"colapso inevitável"</span>.
-          Ele é o criador e líder da seita cristã "Projeto do Portão do Éden", um culto apocalíptico religioso e
+          radical que acredita que foi escolhido por Deus para proteger o povo de <span class="destaq">Hope
+            County</span> de um <span class="destaq">"colapso inevitável"</span>.
+          Ele é o criador e líder da seita cristã <span class="destaq">"Projeto do Portão do Éden"</span>, um culto
+          apocalíptico religioso e
           militar.
         </p>
         <p class="p__details">
-          Far Cry 5 foi bem recebido pela crítica após o seu lançamento, apesar de ter sido objeto de controvérsia
+          <span class="destaq">Far Cry 5</span> foi bem recebido pela crítica após o seu lançamento, apesar de ter sido
+          objeto de controvérsia
           depois
           de ter sido anunciado ao lado de um período de intensos conflitos políticos. Os críticos elogiaram o design do
           mundo aberto, o seu visual e trilha sonora, mas dirigiram críticas para sua história e alguns dos personagens.
           O
           jogo teve um bom desempenho comercial e se tornou o título mais vendido da franquia, arrecadando mais de 310
           milhões de dólares em sua primeira semana de vendas. Vários pacotes de conteúdo para download (DLC) foram
-          lançados. Um título de spin-off e continuação da narrativa, Far Cry: New Dawn, foi lançado em fevereiro de
+          lançados. Um título de spin-off e continuação da narrativa, <span class="destaq">Far Cry: New Dawn</span>, foi
+          lançado em fevereiro de
           2019.
         </p>
       </section>
