--- a/detailsFC6.html
+++ b/detailsFC6.html
@@ -50,20 +50,26 @@
       </div>
       <section id="content__description">
         <p class="p__details">
-          <span class="destaq">Far Cry 6</span> é ambientado na ilha fictícia de <span class="destaq">Yara</span>, uma réplica de <span class="destaq">Cuba</span>. O país é comandado pelo fascista <span class="destaq">Antón
-            Castillo</span> – vivido pelo ator Giancarlo Esposito e, apesar de parecer um verdadeiro paraíso para se viver, o
+          <span class="destaq">Far Cry 6</span> é ambientado na ilha fictícia de <span class="destaq">Yara</span>, uma
+          réplica de <span class="destaq">Cuba</span>. O país é comandado pelo fascista <span class="destaq">Antón
+            Castillo</span> – vivido pelo ator <span class="destaq">Giancarlo Esposito</span> e, apesar de parecer um
+          verdadeiro paraíso para se viver, o
           governo autoritário de seu líder, focado na criação de um medicamento que pode curar diversas doenças –
           inclusive o câncer.
-          Contrariar Castillo nesse território é o mesmo que assinar a sua sentença de morte, e é esse o perigo que vive
-          o protagonista, Dani Rojas. Você pode escolher viver o papel como homem ou mulher, sem alteração no nome.
+          Contrariar <span class="destaq">Castillo</span> nesse território é o mesmo que assinar a sua sentença de
+          morte, e é esse o perigo que vive
+          o protagonista, <span class="destaq">Dani Rojas</span>. Você pode escolher viver o papel como <span
+            class="destaq">homem</span> ou <span class="destaq">mulher</span>,
+          sem alteração no nome.
         </p>
         <p class="p__details">
-          Ao longo do progresso, o personagem se juntará ao grupo de revolucionários para tentar tirar o ditador do
+          Ao longo do progresso, o personagem se juntará ao grupo de <span class="destaq">revolucionários</span> para tentar tirar o ditador do
           poder, ao destruir instalações militares, viver tiroteios com o exército e desbravar os locais mais ocultos de
-          Yara
+          <span class="destaq">Yara</span>
         </p>
         <p class="p__details">
-          Um dos pontos positivos aqui é a presença de localização completa para o Brasil, com menus, legendas e até
+          Um dos pontos positivos aqui é a presença de localização completa para o <span class="destaq">Brasil</span>,
+          com menus, legendas e até
           dublagem em português. A gente sempre ressalta a importância disso para os jogos, pois cria uma identificação
           com o público local e aumenta a imersão do gamer.
         </p>
