--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             proeminência. Seed acredita que ele foi escolhido para proteger o
             povo de Hope County de um "colapso inevitável" e estabeleceu uma
             congregação chamada Projeto do Portão do Éden.
-            Ostensivamente, isto é para cumprir sua missão de levar o povo à salvação;[10] na realidade, Seed é um
+            Ostensivamente, isto é para cumprir sua missão de levar o povo à salvação; na realidade, Seed é um
             pregador radical e o Portão do Éden é um culto apocalíptico militarista.
           </p>
           <a href="./detailsFC5.html">
